# clone-airbnb-backend

./: LICENSE  README.md  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_rename_experiencemodel_experience.py  0003_experience_address_alter_experience_price.py  0004_experience_category_alter_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_review_room.py
rooms/: admin.py  models.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_alter_user_first_name_alter_user_last_name.py  0003_user_is_host_user_name.py
wishlists/: admin.py
wishlists/migrations/: 0001_initial.py
