[tool.poetry]
name = "clone-airbnb-backend"
version = "0.1.0"
description = ""
authors = ["meluvrose <tanggu3910@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clone_airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
